// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente 'SearchPage.jsx'. Debe a 'Flash' y el valor del input debe ser 'flash'. 1`] = `
<div
  className="MuiBox-root MuiBox-root-7"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
        data-shrink={true}
      >
        Buscador
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoComplete="off"
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input"
          disabled={false}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Nombre de héroe..."
          required={false}
          type="text"
          value="flash"
        />
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-3 MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="PrivateNotchedOutline-legendLabelled-5 PrivateNotchedOutline-legendNotched-6"
          >
            <span>
              Buscador
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </form>
  <div
    className="MuiBox-root MuiBox-root-8"
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
  >
    <h5
      className="MuiTypography-root MuiTypography-h5"
    >
      Resultados
    </h5>
    <hr
      className="MuiDivider-root makeStyles-divider-1"
    />
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-3"
      >
        <div
          className="MuiPaper-root MuiCard-root MuiPaper-outlined MuiPaper-rounded"
        >
          <div
            className="MuiCardHeader-root makeStyles-cardTitle-11"
          >
            <div
              className="MuiCardHeader-avatar"
            >
              <div
                className="MuiAvatar-root MuiAvatar-circle makeStyles-avatarDC-10 MuiAvatar-colorDefault"
              >
                F
              </div>
            </div>
            <div
              className="MuiCardHeader-content"
            >
              <span
                className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
              >
                Flash
              </span>
              <span
                className="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
              >
                Jay Garrick
              </span>
            </div>
            <div
              className="MuiCardHeader-action"
            >
              <button
                className="MuiButtonBase-root MuiIconButton-root"
                disabled={false}
                onBlur={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiIconButton-label"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <img
            className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img"
            src="."
            title="Flash"
          />
          <div
            className="MuiCardContent-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body1"
            >
              Flash Comics #1
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1"
            >
              Jay Garrick, Barry Allen, Wally West, Bart Allen
            </p>
          </div>
          <div
            className="MuiCardActions-root MuiCardActions-spacing"
          >
            <a
              aria-current={null}
              aria-disabled={false}
              aria-label="learn more"
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              href="/hero/dc-flash"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                className="MuiButton-label"
              >
                ver más
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en el componente 'SearchPage.jsx'. Debe renderizar el componente correctamente. 1`] = `
<div
  className="MuiBox-root MuiBox-root-2"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
        data-shrink={true}
      >
        Buscador
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoComplete="off"
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input"
          disabled={false}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Nombre de héroe..."
          required={false}
          type="text"
          value=""
        />
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-3 MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="PrivateNotchedOutline-legendLabelled-5 PrivateNotchedOutline-legendNotched-6"
          >
            <span>
              Buscador
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </form>
</div>
`;

exports[`Pruebas en el componente 'SearchPage.jsx'. No bebe de mostrar ningún resultado si q es 'hero-mock'. 1`] = `
<div
  className="MuiBox-root MuiBox-root-12"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
        data-shrink={true}
      >
        Buscador
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoComplete="off"
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input"
          disabled={false}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Nombre de héroe..."
          required={false}
          type="text"
          value="hero-mock"
        />
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-3 MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="PrivateNotchedOutline-legendLabelled-5 PrivateNotchedOutline-legendNotched-6"
          >
            <span>
              Buscador
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </form>
  <div
    className="MuiBox-root MuiBox-root-13"
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
  >
    <h5
      className="MuiTypography-root MuiTypography-h5 MuiTypography-colorError"
    >
      No se encontraron coincidencias...
    </h5>
  </div>
</div>
`;
